tests/ui/traits/issue-75627.stderr
error[E0412]: cannot find type `T` in this scope
  --> $DIR/issue-75627.rs:3:26
   |
LL | unsafe impl Send for Foo<T> {}
   |                          ^ not found in this scope
   |
help: you might be missing a type parameter
   |
LL | unsafe impl<T> Send for Foo<T> {}
   |            +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
