tests/ui/traits/issue-75627.rs
struct Foo<T>(T, *const ());

unsafe impl Send for Foo<T> {}
//~^ ERROR cannot find type

fn main() {}
